Changed type of the input

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <form>
-        <input class="todo-input" type="input">
+        <input class="todo-input" type="text">
         <button class="todo-button" type="submit">
             <i class="fa fa-plus"></i>
         </button>
